--- a/public/about.html
+++ b/public/about.html
@@ -1,10 +1,22 @@
-<h1>About Me</h1>
-<p>
-  As a computer engineering undergraduate from <a href="https://antalya.edu.tr/en">Antalya Bilim University</a>, 
-  I have gained knowledge in AI and completed many respective projects. One of the
-  most important projects I completed was a stroke prediction system project. Using a large
-  dataset of over 5,000 patient records with 11 features each, the program achieved a
-  94% accuracy score and 93% average 10-fold cross-validation score. I possess
-  strong skills in software development and data analysis, with a focus on delivering
-  impactful results.
-</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Me</title>
+</head>
+
+<body>
+  <h1>About Me</h1>
+  <p>
+    Since a very young age, I have had a keen interest in computers and how they operate. I always
+    wanted to be able to create something the world could see, which is what made me computer
+    science and develope an interest towards web development, machine learning, and blockchain
+    development.
+  </p>
+  <hr />
+
+</body>
+
+</html>
